--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@
 <body>
 
 <img src="cabecalho.png"
-     height="380"
-     width="1520"
      alt="Logo Cabeçalho.png"
+     style="width: 100%; height: auto;"
  >
 
 <div class="linha-boleto">
