--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Lista de Pagamentos</title>
+<title>Códigos de Pagamentos</title>
 <style>
-  h3 {
+
+h2 {
+    color: blueviolet;
+  }
+
+  h4 {
     color: red;
   }
 
@@ -88,51 +93,54 @@
      style="width: 100%; height: auto;"
  >
 
+<h4>Códigos de Barras</h4>
+
 <div class="linha-boleto">
-  <span class="nome-boleto">COSANPA VILA - JULHO - R$ 49,08</span>
+  <span class="nome-boleto">VENC. 14/08 COSANPA VILA - JULHO - R$ 49,08</span>
   <span class="codigo-boleto">00190.00009 03469.663110 31074.781175 2 11730000004908</span>
   <button class="copy-btn">Copiar</button>
 </div>
 
 <div class="linha-boleto">
-  <span class="nome-boleto">COSANPA VILA - AGOSTO - R$ 49,08</span>
+  <span class="nome-boleto">VENC. 15/09 COSANPA VILA - AGOSTO - R$ 49,08</span>
   <span class="codigo-boleto">00190.00009 03469.663110 31737.220173 6 12050000004908</span>
   <button class="copy-btn">Copiar</button>
 </div>
 
 <div class="linha-boleto">
-  <span class="nome-boleto">COSANPA LOJA - AGOSTO - 195,68</span>
+  <span class="nome-boleto">VENC. 15/09 COSANPA LOJA - AGOSTO - 195,68</span>
   <span class="codigo-boleto">00190.00009 03469.663110 31737.276175 4 12050000019568</span>
   <button class="copy-btn">Copiar</button>
 </div>
 
 <div class="linha-boleto">
-  <span class="nome-boleto">CASA BAHIA (GELADEIRA) 11/15 - R$ 349,19</span>
+  <span class="nome-boleto">VENC. 15/09 CASA BAHIA (GELADEIRA) 11/15 - R$ 349,19</span>
   <span class="codigo-boleto">00190.00009 03546.281001 53292.866174 6 11730000034919</span>
   <button class="copy-btn">Copiar</button>
 </div>
 
 <div class="linha-boleto">
-  <span class="nome-boleto">ENERGIA KITNET E - R$ 490,30</span>
+  <span class="nome-boleto">VENC. 20/09 SISTEMA CLARIAI - R$ 221,90</span>
+  <span class="codigo-boleto">46191.11000 00000.000034 53036.422011 1 12100000022190</span>
+  <button class="copy-btn">Copiar</button>
+</div>
+
+<h4>PIX Copia e Cola</h4>
+
+<div class="linha-boleto">
+  <span class="nome-boleto">VENC. 28/08 ENERGIA KITNET E - R$ 490,30</span>
   <span class="codigo-boleto">00020126990014br.gov.bcb.pix01366a36f461-044b-4292-9090-a5a6d6954c080237Venc: 27.08.2025 - R$          490,305204000053039865406490.305802BR5915Equatorial Para6005Belem62270523BOLETO3373384197065892363044217</span>
   <button class="copy-btn">Copiar</button>
 </div>
 
 <div class="linha-boleto">
-  <span class="nome-boleto">ENERGIA KITNET C - R$ 773,89</span>
+  <span class="nome-boleto">VENC. 28/08 ENERGIA KITNET C - R$ 773,89</span>
   <span class="codigo-boleto">00020126990014br.gov.bcb.pix01366a36f461-044b-4292-9090-a5a6d6954c080237Venc: 27.08.2025 - R$          773,895204000053039865406773.895802BR5915Equatorial Para6005Belem62270523BOLETO33733842030574650630403F8</span>
   <button class="copy-btn">Copiar</button>
 </div>
 
-<div class="linha-boleto">
-  <span class="nome-boleto">SISTEMA CLARIAI - R$ 221,90</span>
-  <span class="codigo-boleto">46191.11000 00000.000034 53036.422011 1 12100000022190</span>
-  <button class="copy-btn">Copiar</button>
-</div>
-
-
-<h3>Energias Serena</h3>
-
+<img src="serena.png" alt="serena.png" style="width: 100%; height: auto;">
+<h4>PIX Copia e Cola</h4>
 
 <div class="linha-boleto">
   <span class="nome-boleto">MÁRCIA - FEVEREIRO - R$ 1.197,55</span>
