--- a/index.html
+++ b/index.html
@@ -94,24 +94,107 @@ h2 {
  >
 
 <h4>Códigos de Barras</h4>
+        <!-- Google Fonts: Inter -->
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+        <style>
+            body {
+                font-family: 'Inter', sans-serif;
+                color: #333;
+                background: #f8f9fa;
+                margin: 0;
+                padding: 0;
+            }
+            header {
+                background: linear-gradient(90deg, #0d6efd 0%, #6c757d 100%);
+                color: #fff;
+                padding: 1.5rem 0 1rem 0;
+                text-align: center;
+                box-shadow: 0 2px 8px rgba(0,0,0,0.04);
+            }
+            header img {
+                max-width: 80px;
+                margin-bottom: 0.5rem;
+            }
+            h1 {
+                font-size: 2rem;
+                font-weight: 700;
+                margin: 0.5rem 0 0 0;
+                color: #fff;
+            }
+            h2 {
+                font-size: 1.2rem;
+                font-weight: 600;
+                color: #222;
+                margin-top: 2rem;
+                text-align: center;
+            }
+            .container {
+                max-width: 800px;
+                margin: 0 auto;
+                padding: 1rem;
+            }
+            .card {
+                background: #fff;
+                border-radius: 12px;
+                padding: 1rem;
+                margin-bottom: 1rem;
+                box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                transition: transform .2s, box-shadow .2s;
+            }
+            .card:hover {
+                transform: translateY(-2px);
+                box-shadow: 0 4px 12px rgba(0,0,0,0.12);
+            }
+            .card span {
+                font-weight: 600;
+                color: #222;
+            }
+            .card button {
+                background: #0d6efd;
+                color: #fff;
+                border: none;
+                border-radius: 8px;
+                padding: 0.5rem 1rem;
+                cursor: pointer;
+                font-size: 1rem;
+                transition: background .3s;
+                display: flex;
+                align-items: center;
+                gap: 0.5rem;
+            }
+            .card button:hover {
+                background: #0b5ed7;
+            }
+            footer {
+                text-align: center;
+                color: #6c757d;
+                font-size: 0.95rem;
+                padding: 1.5rem 0 1rem 0;
+                background: none;
+                margin-top: 2rem;
+            }
+            @media (max-width: 600px) {
+                .container {
+                    padding: 0.5rem;
+                }
+                .card {
+                    flex-direction: column;
+                    align-items: flex-start;
+                    gap: 0.5rem;
+                }
+                h1 {
+                    font-size: 1.3rem;
+                }
+                h2 {
+                    font-size: 1rem;
+                }
+            }
+        </style>
 
-<div class="linha-boleto">
-  <span class="nome-boleto">VENC. 14/08 COSANPA VILA - JULHO - R$ 49,08</span>
-  <span class="codigo-boleto">00190.00009 03469.663110 31074.781175 2 11730000004908</span>
-  <button class="copy-btn">Copiar</button>
-</div>
 
-<div class="linha-boleto">
-  <span class="nome-boleto">VENC. 15/09 COSANPA VILA - AGOSTO - R$ 49,08</span>
-  <span class="codigo-boleto">00190.00009 03469.663110 31737.220173 6 12050000004908</span>
-  <button class="copy-btn">Copiar</button>
-</div>
-
-<div class="linha-boleto">
-  <span class="nome-boleto">VENC. 15/09 COSANPA LOJA - AGOSTO - 195,68</span>
-  <span class="codigo-boleto">00190.00009 03469.663110 31737.276175 4 12050000019568</span>
-  <button class="copy-btn">Copiar</button>
-</div>
 
 <div class="linha-boleto">
   <span class="nome-boleto">VENC. 15/09 CASA BAHIA (GELADEIRA) 11/15 - R$ 349,19</span>
@@ -119,25 +202,9 @@ h2 {
   <button class="copy-btn">Copiar</button>
 </div>
 
-<div class="linha-boleto">
-  <span class="nome-boleto">VENC. 20/09 SISTEMA CLARIAI - R$ 221,90</span>
-  <span class="codigo-boleto">46191.11000 00000.000034 53036.422011 1 12100000022190</span>
-  <button class="copy-btn">Copiar</button>
-</div>
+
 
 <h4>PIX Copia e Cola</h4>
-
-<div class="linha-boleto">
-  <span class="nome-boleto">VENC. 28/08 ENERGIA KITNET E - R$ 490,30</span>
-  <span class="codigo-boleto">00020126990014br.gov.bcb.pix01366a36f461-044b-4292-9090-a5a6d6954c080237Venc: 27.08.2025 - R$          490,305204000053039865406490.305802BR5915Equatorial Para6005Belem62270523BOLETO3373384197065892363044217</span>
-  <button class="copy-btn">Copiar</button>
-</div>
-
-<div class="linha-boleto">
-  <span class="nome-boleto">VENC. 28/08 ENERGIA KITNET C - R$ 773,89</span>
-  <span class="codigo-boleto">00020126990014br.gov.bcb.pix01366a36f461-044b-4292-9090-a5a6d6954c080237Venc: 27.08.2025 - R$          773,895204000053039865406773.895802BR5915Equatorial Para6005Belem62270523BOLETO33733842030574650630403F8</span>
-  <button class="copy-btn">Copiar</button>
-</div>
 
 <img src="serena.png" alt="serena.png" style="width: 100%; height: auto;">
 <h4>PIX Copia e Cola</h4>
