--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ h2 {
 
   body {
     font-family: Arial, sans-serif;
-    background: #f8f8f8;
+    background: #f8f8f8f8;
     padding: 20px;
   }
 
@@ -250,6 +250,26 @@ h2 {
     });
   });
 </script>
+
+<!-- Exemplo de rodapé -->
+<footer style="
+  position: fixed; 
+  bottom: 0; 
+  left: 0; 
+  width: 100%; 
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  gap: 8px; 
+  padding: 10px; 
+  background-color: #f8f9fa; 
+  border-top: 1px solid #ddd;
+">
+  <img src="img/minha-logo.png" alt="Logo da minha empresa" width="30" height="30">
+  <span>© 2025 Rogério Estumano</span>
+</footer>
+
+
 
 </body>
 </html>
