--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ h2 {
   background-color: #f8f9fa; 
   border-top: 1px solid #ddd;
 ">
-  <img src="img/minha-logo.png" alt="Logo da minha empresa" width="30" height="30">
+  <img src="minha-logo.png" alt="Logo da minha empresa" width="30" height="30">
   <span>© 2025 Rogério Estumano</span>
 </footer>
 
