ATUALIZAÇÃO index.html

--- a/index.html
+++ b/index.html
@@ -202,9 +202,13 @@ h2 {
   <button class="copy-btn">Copiar</button>
 </div>
 
-
-
 <h4>PIX Copia e Cola</h4>
+<div class="linha-boleto">
+  <span class="nome-boleto">VENC. 22/09 INTERNET OI - R$ 167,96</span>
+  <span class="codigo-boleto">00020126700014br.gov.bcb.pix0136d8c9d705-a4b9-4963-8ddf-8fbc8548c6510208CLIENTCO52040000530398654130000000167.965802BR5908CLIENTCO6014RIO DE JANEIRO6229052520123471990612511943002006304D5E3</span>
+  <button class="copy-btn">Copiar</button>
+</div>
+  
 
 <img src="serena.png" alt="serena.png" style="width: 100%; height: auto;">
 <h4>PIX Copia e Cola</h4>
@@ -273,3 +277,4 @@ h2 {
 
 </body>
 </html>
+
