--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Códigos de Pagamentos</title>
+
 <style>
 
 h2 {
@@ -197,14 +198,14 @@ h2 {
 
 
 <div class="linha-boleto">
-  <span class="nome-boleto">VENC. 15/09 CASA BAHIA (GELADEIRA) 11/15 - R$ 349,19</span>
+  <span class="nome-boleto">CASA BAHIA (GELADEIRA) 11/15 - R$ 349,19_VENC. 15/09</span>
   <span class="codigo-boleto">00190.00009 03546.281001 53292.866174 6 11730000034919</span>
   <button class="copy-btn">Copiar</button>
 </div>
 
 <h4>PIX Copia e Cola</h4>
 <div class="linha-boleto">
-  <span class="nome-boleto">VENC. 22/09 INTERNET OI - R$ 167,96</span>
+  <span class="nome-boleto"> INTERNET OI - R$ 167,96_VENC. 22/09</span>
   <span class="codigo-boleto">00020126700014br.gov.bcb.pix0136d8c9d705-a4b9-4963-8ddf-8fbc8548c6510208CLIENTCO52040000530398654130000000167.965802BR5908CLIENTCO6014RIO DE JANEIRO6229052520123471990612511943002006304D5E3</span>
   <button class="copy-btn">Copiar</button>
 </div>
@@ -277,4 +278,3 @@ h2 {
 
 </body>
 </html>
-
