--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ h2 {
   }
 
   body {
-    font-family: Arial, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     background: #f8f8f8f8;
     padding: 20px;
   }
@@ -94,7 +94,7 @@ h2 {
      style="width: 100%; height: auto;"
  >
 
-<h4>Códigos de Barras</h4>
+
         <!-- Google Fonts: Inter -->
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
         <style>
@@ -195,13 +195,21 @@ h2 {
             }
         </style>
 
-
+<h4>Códigos de Barras</h4>
 
 <div class="linha-boleto">
   <span class="nome-boleto">CASA BAHIA (GELADEIRA) 11/15 - R$ 349,19_VENC. 15/09</span>
   <span class="codigo-boleto">00190.00009 03546.281001 53292.866174 6 11730000034919</span>
   <button class="copy-btn">Copiar</button>
 </div>
+
+<div class="linha-boleto">
+  <span class="nome-boleto">SISTEMA SENSEBOARD - R$ 597,00_VENC. 28/09</span>
+  <span class="codigo-boleto">40192025244600000000300001280866912180000059700</span>
+  <button class="copy-btn">Copiar</button>
+</div>
+
+
 
 <h4>PIX Copia e Cola</h4>
 <div class="linha-boleto">
@@ -271,7 +279,7 @@ h2 {
   border-top: 1px solid #ddd;
 ">
   <img src="minha-logo.png" alt="Logo da minha empresa" width="30" height="30">
-  <span>© 2025 Rogério Estumano</span>
+    <span>© 2025 Rogério Estumano</span>
 </footer>
 
 
