--- a/index.html
+++ b/index.html
@@ -266,9 +266,7 @@ h2 {
 
 <!-- Exemplo de rodapé -->
 <footer style="
-  position: fixed; 
-  bottom: 0; 
-  left: 0; 
+  position: relative; 
   width: 100%; 
   display: flex; 
   justify-content: center; 
@@ -281,6 +279,7 @@ h2 {
   <img src="minha-logo.png" alt="Logo da minha empresa" width="30" height="30">
     <span>© 2025 Rogério Estumano</span>
 </footer>
+
 
 
 
