--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="viewport" content="width=1024" />
 <title>Códigos de Pagamento MARG</title>
 <style>
   :root{
@@ -87,7 +87,7 @@
 <script>
 /* ==================== CONFIGURAÇÃO ==================== */
 /* Troque a senha aqui conforme desejar */
-const SENHA = "1596";
+const SENHA = "7025";
 
 /* Chave do localStorage */
 const LS_KEY = "meus_pagamentos_v1";
