--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
 <meta charset="utf-8" />
-<meta name="viewport" content="width=1024" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Códigos de Pagamento MARG</title>
 <style>
   :root{
