--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 <h4>Códigos de Pagamento</h4>
 <div id="lista-pagamentos" aria-live="polite"></div>
 
+<!-- Seu script JavaScript original permanece igual -->
 <script>
 /* ==================== CONFIGURAÇÃO ==================== */
 const SENHA = "7025";
@@ -262,6 +263,7 @@ renderLista();
 </footer>
 </body>
 </html>
+
 
 
 
