--- a/index.html
+++ b/index.html
@@ -123,8 +123,12 @@ function carregar(){
 let pagamentos = carregar();
 if(!pagamentos){
   pagamentos = [
-    { id: Date.now()+1, descricao: "CASA BAHIA (GELADEIRA) – R$ 349,19", codigo: "34191 349189 000000 000000 000000 0" },
-    { id: Date.now()+2, descricao: "SISTEMA SENSEBOARD – R$ 597,00", codigo: "00020101021226870014BR.GOV.BCB.PIX0121..." }
+    { id: Date.now()+1, descricao: "SISTEMA SENSEBOARD_R$ 597,00_Venc:28/09", codigo: "40192025244600000000300001280866912180000059700" },
+    { id: Date.now()+2, descricao: "SERENA MÁRCIA_R$ 1.197,55_Venc:Março", codigo: "00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/49f8e9f6-a667-490e-8ecd-0768f4587ac95204000053039865802BR5921CONSORCIO OMEGA GD 126005BELEM62070503***6304F79D" },
+    { id: Date.now()+3, descricao: "SERENA LOJA_R$ 2.204,20_Venc:Junho", codigo: "00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/824f1dac-2b79-4373-a141-d5a35ce160685204000053039865802BR5921CONSORCIO OMEGA GD 126005BELEM62070503***63043402" },
+    { id: Date.now()+4, descricao: "SERENA LOJA_R$ 2.135,86_Venc:Julho", codigo: "00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/14413ac1-23d3-4550-b30a-2fe7ad3e9a885204000053039865802BR5921CONSORCIO OMEGA GD 126005BELEM62070503***630483A5" },
+    { id: Date.now()+5, descricao: "SERENA LOJA_R$ 2.302,23_Venc:Agosto", codigo: "00020101021226770014BR.GOV.BCB.PIX2555api.itau/pix/qr/v2/dd2ede7b-ed04-4ec0-a291-dd60ad82554f5204000053039865802BR5921CONSORCIO OMEGA GD 126005BELEM62070503***6304D8CF" }
+    
   ];
   salvar(pagamentos);
 }
@@ -263,7 +267,4 @@ renderLista();
 </footer>
 </body>
 </html>
-
-
-
 
